api/tests/integration/snapshots/r#mod__integration__destination_test__an_existing_destination_can_be_read.snap
---
source: api/tests/integration/destination_test.rs
expression: response.config
---
BigQuery {
    project_id: "project-id",
    dataset_id: "dataset-id",
    service_account_key: SerializableSecretString(
        "[REDACTED]",
    ),
    max_staleness_mins: None,
}
